[metadata]
name = PyJWT
version = attr: jwt.__version__
author = Jose Padilla
author_email = hello@jpadilla.com
description = JSON Web Token implementation in Python
license = MIT
keywords =
    json
    jwt
    security
    signing
    token
    web
url = https://github.com/jpadilla/pyjwt
long_description = file: README.rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Utilities

[options]
python_requires = >=3.5
packages = find:

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    zope.interface
crypto =
    cryptography>=1.4
tests =
    pytest>=6.0.0,<7.0.0
    coverage[toml]==5.0.4
dev =
    sphinx
    sphinx-rtd-theme
    zope.interface
    cryptography>=1.4
    pytest>=6.0.0,<7.0.0
    coverage[toml]==5.0.4
    mypy
    pre-commit

[options.packages.find]
exclude =
    tests
    tests.*
