[metadata]
name = PyJWT
version = attr: jwt.__version__
author = Jose Padilla
author_email = hello@jpadilla.com
description = JSON Web Token implementation in Python
license = MIT
keywords =
    json
    jwt
    security
    signing
    token
    web
url = https://github.com/jpadilla/pyjwt
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Utilities

[options]
zip_safe = false
include_package_data = true
python_requires = >=3.6
packages = find:

[options.package_data]
* = py.typed

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    zope.interface
crypto =
    cryptography>=2.6,<4.0.0
tests =
    pytest>=6.0.0,<7.0.0
    coverage[toml]==5.0.4
dev =
    sphinx
    sphinx-rtd-theme
    zope.interface
    cryptography>=2.6,<4.0.0
    pytest>=6.0.0,<7.0.0
    coverage[toml]==5.0.4
    mypy
    pre-commit

[options.packages.find]
exclude =
    tests
    tests.*

[flake8]
max-line-length = 79
extend-ignore = E203, E501

[mypy]
python_version = 3.6
ignore_missing_imports = true
warn_unused_ignores = true
